namespace java cn.com.sand.component.rpc.thrift.idl

exception McServiceException
{
	1: string what,
	2: string why
}